--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@ layout: archive
 title: "Home"
 ---
 
-{% include archive.html %}
-
+<ul>
+    {% for post in site.posts %}
+        <li>
+            <h2><a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">{{ post.title }}</a></h2>
+        </li>
+    {% endfor %}
+</ul>
